# newslookout_rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  run_app.cmd
conf/: newslookout.toml
models/: DuelingDQN.safetensors
scripts/: build_vectorstore.py  consolidate_zips.py  download_nse_bhavcopy_history.py  export_embeddings.py  load_nse_to_sqlite.py  vectorize_chunks.py
src/: analysis.rs  bin.rs  cfg.rs  content_extraction.rs  discovery.rs  document.rs  html_extract.rs  lib.rs  llm.rs  market_data.rs  metrics.rs  network.rs  pipeline.rs  queue.rs  utils.rs  web_api.rs
src/feeds/: feed_bse_bhavcopy.rs  feed_nse_bhavcopy.rs  mod.rs
src/plugins/: html_news.rs  mod_chatgpt.rs  mod_classify.rs  mod_cmdline.rs  mod_dataprep.rs  mod_dedupe.rs  mod_doc_type.rs  mod_emit_graph.rs  mod_emit_tables.rs  mod_en_aljazeera.rs  mod_en_allafrica.rs  mod_en_ap_news.rs  mod_en_arab_news.rs  mod_en_arstechnica.rs  mod_en_au_abc.rs  mod_en_au_smh.rs  mod_en_bbc.rs  mod_en_bloomberg.rs  mod_en_business_insider.rs  mod_en_ca_cbc.rs  mod_en_ca_globeandmail.rs  mod_en_chicago_tribune.rs  mod_en_cnbc.rs  mod_en_cnet.rs  mod_en_cnn.rs  mod_en_fortune.rs  mod_en_foxnews.rs  mod_en_guardian.rs  mod_en_guardian_ng.rs  mod_en_gulf_news.rs  mod_en_in_business_standard.rs  mod_en_in_forbes.rs  mod_en_in_generic_retriever.rs  mod_en_in_hindustan_times.rs  mod_en_in_indianexpress.rs  mod_en_in_irdai.rs  mod_en_in_livemint.rs  mod_en_in_moneycontrol.rs  mod_en_in_ndtv.rs  mod_en_in_news18.rs  (+42 more)
src/store/: batch_log.rs  batch_writer.rs  mod.rs  records.rs
