[package]
name = "newslookout"
version = "0.4.3"
edition = "2021"
authors = ["Sandeep Singh Sandhu"]
description = "A web scraping platform built for news scanning, using LLMs for text processing, powered by Rust"
repository = "https://github.com/sandeep-sandhu/newslookout_rs"
homepage = "https://github.com/sandeep-sandhu/sandeep-sandhu"
documentation = "https://docs.rs/newslookout"
keywords = ["analytics", "data_transformations", "machine_learning", "Model_deployment", "Data_Science"]
categories = ["command-line-utilities", "command-line-interface", "finance", "text-processing"]
readme = "README.md"
license-file = "LICENSE"
#build = "build.rs"

[lib]
name = "newslookout"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name="newslookout_app"
path = "src/bin.rs"

[dependencies]
log4rs = { version = "1.3.0", features = ["gzip"]}
rand = "0.9.0-alpha.2"
regex = "1.11.1"
scraper = "0.21.0"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
reqwest = { version = "0.12.9", features = ["json", "rustls-tls", "blocking", "http2", "cookies", "gzip"] }
# set "http3" feature in future releases of reqwest when it becomes stable.
lopdf = { version = "0.34.0", features = ["pom", "pom_parser", "nom_parser"]}
pdf-extract = "0.7.10"
config = "0.14.1"
chrono = "0.4.38"
bytes = "1.8.0"
nom = "8.0.0-alpha2"
rusqlite = "0.32.1"
sqlx = { version = "0.8.2", features = [ "runtime-tokio-rustls", "postgres", "macros", "runtime-tokio-native-tls", "sqlite" ] }
postgres = "0.19.9"
postgres-native-tls = "0.5.0"
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
#rusty-tesseract = "1.1.10"
#tch = { version = "0.17.0", features = ["download-libtorch"] }
#rust-bert = "0.23.0"
#rust_tokenizers = "8.1.1"
#faiss = {version = "0.12.1"}
#env_logger = "0.11.5"
#linfa = "0.7.0"
#gbdt = "0.1.3"
#darn = "0.3.4"
#plotly = "0.10.0"
#jemallocator = "0.5.4"
#strsim = "0.11.1"
#jaro_winkler = "0.1.0"
#ndarray = "0.16.1"
#polars = "0.44.2"
#confy = "^0.6.1"
#csv = "1.3.0"
#xml-rs = "0.8.22"
#xrust = "1.1.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"

[build-dependencies]
#tch = "0.17.0"
